# MySql-Rando

./: CMakeLists.txt  DirCheck.hpp  MethodProcess.hpp  MyApp.cpp  MyApp.hpp  README.md  Randomize.hpp  Range.hpp  main.cpp
Columns/: File1.txt  File2.txt
